--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.2.0",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.0",
+    "recharts": "^2.15.3",
     "sharp": "^0.34.1",
     "tailwind-merge": "^2.5.5"
   },
