--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -23,6 +24,7 @@
     "react-day-picker": "^9.4.4",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-spinners": "^0.15.0",
