--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.465.0",
-    "next": "14.2.17",
+    "next": "^14.2.32",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-day-picker": "^9.4.4",
